Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-13553

Panic in qs60style.cpp while drawing a QTreeView

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.7.1
    • 4.6.3
    • None
    • None
    • 616d84ddb2a07191d2754b0f3e7296cae472b738

    Description

      At least in the Symbian WINSCW emulator (not Nokia Qt simulator), my app crashes at the last line of the following excerpt of qs60style.cpp
      case PE_PanelItemViewRow: // ### Qt 5: remove
      #ifndef QT_NO_ITEMVIEWS
      if (const QStyleOptionViewItemV4 *vopt = qstyleoption_cast<const QStyleOptionViewItemV4 *>(option)) {
      if (vopt->palette.base().texture().cacheKey() != QS60StylePrivate::m_themePalette->base().texture().cacheKey()) {

      QS60StylePrivate::m_themePalette is null in my case.

      A modified Qt-standard-example is attached, which demonstrates the error.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            samimeri Sami Merila (Inactive)
            kschultz Klaus Schultz
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes