QS60Style: Highlighted TreeBranch indicator is incorrect

Part of the fix for QTBUG-13553 incorrectly uses commonstyle to draw branch
highlight, when it should use QS60Style.

As a fix, commonstyle should not be used unless theme palette has been
tempered with.

Task-number: QTBUG-13699
Reviewed-by: Miikka Heikkinen